--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Smuggling -- Juvenile fiction'
 - !lcsh 'Sea stories'
 - !lcc 'PZ'
+- GITenberg
 title: The Meadow-Brook Girls by the Sea; Or, The Loss of The Lonesome Bar
 url: http://www.gutenberg.org/ebooks/17099
